fixd text color

--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Primary Meta Tags -->
+    <title>TaskPro | Enterprise Task Management</title>
+    <meta name="title" content="TaskPro | Enterprise Task Management" />
+    <meta name="description" content="Streamline your workflow with TaskPro, the enterprise-grade task management solution designed for modern teams." />
+    <meta name="keywords" content="task management, project management, productivity, enterprise tasks, team collaboration" />
+    <meta name="author" content="TaskPro" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://taskpro.example.com/" />
+    <meta property="og:title" content="TaskPro | Enterprise Task Management" />
+    <meta property="og:description" content="Streamline your workflow with TaskPro, the enterprise-grade task management solution designed for modern teams." />
+    <meta property="og:image" content="/favicon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://taskpro.example.com/" />
+    <meta property="twitter:title" content="TaskPro | Enterprise Task Management" />
+    <meta property="twitter:description" content="Streamline your workflow with TaskPro, the enterprise-grade task management solution designed for modern teams." />
+    <meta property="twitter:image" content="/favicon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <title>TaskPro | Enterprise Task Management</title>
   </head>
   <body>
     <div id="root"></div>
